# langchain-examples

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
module-1/: 1.1-invoking-models.py  1.11-agent-with-memory.py  1.2-model-providers copy.py  1.3-invoking-agent.py  1.5-simple-prompt.py  1.6-scifi-agent-few-shot-prompt.py  1.7-scifi-agent-structured-input-and-output.py  1.8-defining-tools.py
notebooks/: cuisine-chief-agent.ipynb  email-assistant.ipynb  personal-agent.ipynb  rag.ipynb  sql-agent.ipynb  wedding-planner-agent.ipynb
notebooks/advanced-agents/: 1-mcp.ipynb  2-travel-agent.ipynb  3-runtime-context.ipynb  4-state.ipynb  5-multi-agent.ipynb
notebooks/advanced-agents/resources/: 1-mcp-server.py
notebooks/foundational-concepts/: 1.1-invoking-models.ipynb  1.12-multimodal-messages.ipynb  1.4-streaming-messages.py
notebooks/module-1/: 1.10-agent-with-search-tool.py  1.12-multimodal-messages.ipynb  1.9-agents-with-tools.py
notebooks/module-1/.ipynb_checkpoints/: 1.1-invoking-models-checkpoint.ipynb  1.12-multimodal-messages-checkpoint.ipynb
notebooks/production-ready-agents/: 2-human-in-the-loop.ipynb  3-dynamic-models.ipynb  4-dynamic-prompts.ipynb  5-dynamic-tools.ipynb  summarize-messages.ipynb
studio/: .env.example  cuisine-chief-agent.py  langgraph.json
studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
