[project]
name = "langchain-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.1",
    "jupytext>=1.18.1",
    "langchain>=1.2.1",
    "langchain-openai>=1.1.6",
    "langgraph-cli[inmem]>=0.4.11",
    "notebook>=7.5.1",
    "pydub>=0.25.1",
    "scipy>=1.16.3",
    "sounddevice>=0.5.3",
    "tavily>=1.1.0",
]
